# benchmark

./: .gitignore  README.md  benchmark.py  config.py  pyproject.toml
app/: __init__.py
app/auth/: email.py  forms.py  routes.py
bootlets/: __init__.py  boots.py  boots_base.py  decorators.py  funcs.py  html.py  html_base.py
migrations/versions/: 54ef6d5982b3_.py
