[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = ""
authors = ["Jordan Begg <jordansbegg@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^2.0.2"
python-dotenv = "^0.19.2"
Flask-WTF = "^1.0.0"
Werkzeug = "^2.0.3"
Flask-Login = "^0.5.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-Bootstrap = "^3.3.7"
Flask-Mail = "^0.9.1"
Flask-Moment = "^1.0.2"
email-validator = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
